# walrus

./: .gitmodules  rustfmt.toml  shell.nix  walrus_builtins.c
crates/arena/: Cargo.toml
crates/walrus-cli/: Cargo.toml
crates/walrus-cli/src/: diagnostics.rs  main.rs
crates/walrus-codegen/: Cargo.toml  build.rs
crates/walrus-codegen/snapshots/: add_options.snap  assign.snap  assign_field.snap  assign_var.snap  binop_and.snap  binop_or.snap  bool_and.snap  bool_not.snap  bool_or.snap  builtin_exit.snap  builtin_fn_value.snap  builtin_putchar.snap  danglin_ptr.snap  early_return.snap  empty_fn.snap  enum0.snap  enum1.snap  enum1_with_payload.snap  enum2_variant0.snap  enum2_variant1.snap  enum2_with_payload_variant0.snap  enum2_with_payload_variant1.snap  field_expr.snap  float_add.snap  float_div.snap  float_eq.snap  float_greater.snap  float_greater_eq.snap  float_less.snap  float_less_eq.snap  float_mul.snap  float_neg.snap  float_neq.snap  float_plus.snap  float_sub.snap  fn_value.snap  fuck.snap  get_five_fn.snap  id_fn.snap  if_then_else_false.snap  (+45 more)
crates/walrus-codegen/src/: builtins.c  builtins.ll  codegen.rs  free_vars.rs  lib.rs  tests.rs  walrus_builtins.c
crates/walrus-codegen/src/codegen/: expr.rs  fns.rs  operators.rs  pat.rs  trivial.rs  types.rs  util.rs
crates/walrus-lexer/: Cargo.toml
crates/walrus-lexer/snapshots/: bin_int.snap  dec_int.snap  empty_file.snap  escaped_char.snap  escaped_string.snap  float.snap  hex_int.snap  idents.snap  int.snap  keywords.snap  operators.snap  simple_char.snap  simple_string.snap  symbols.snap  trivia.snap  unicode_char.snap  unicode_idents.snap
crates/walrus-lexer/src/: lib.rs  token_kind.rs
crates/walrus-parser/: Cargo.toml
crates/walrus-parser/snapshots/: add_expr.snap  assign_expr.snap  bin_int_lit.snap  block_expr.snap  block_expr2.snap  block_expr3.snap  break_expr.snap  call_expr.snap  continue_expr.snap  dec_int_lit.snap  empty_enum.snap  empty_file.snap  empty_fn.snap  empty_struct.snap  enum_expr.snap  enum_pat.snap  enum_with_variants.snap  escaped_char_lit.snap  false_expr.snap  false_lit.snap  field_expr.snap  float_lit.snap  fn_type.snap  hex_int_lit.snap  if_else_expr.snap  if_else_if_expr.snap  if_expr.snap  ignore_pat.snap  infer_type.snap  int_expr.snap  lambda_expr.snap  lit_pat.snap  loop_expr.snap  match_expr.snap  mixed_expr.snap  mul_expr.snap  mut_var_pat.snap  named_field_expr.snap  nested_add_expr.snap  nested_assign_expr.snap  (+28 more)
crates/walrus-parser/src/: grammar.rs  lib.rs
crates/walrus-parser/src/grammar/: decl.rs  expr.rs  lit.rs  pat.rs  support.rs  tokens.rs  ty.rs
crates/walrus-semantics/: Cargo.toml
crates/walrus-semantics/snapshots/: add.snap  bool_lit.snap  char_lit.snap  empty_fn.snap  factorial.snap  float_lit.snap  fn_params.snap  fn_var.snap  if_then_else.snap  int_lit.snap  lambda.snap  lambda2.snap  lambda_return_int.snap  lambda_return_unit.snap  let_var.snap  loop_int.snap  loop_never.snap  loop_unit.snap  parity.snap  return_int.snap  tuple.snap  unary_sub.snap  unit_stmt.snap
crates/walrus-semantics/snapshots/infer/: add.snap  bool_lit.snap  char_lit.snap  cmp.snap  coerce_if_branches_else.snap  coerce_if_branches_then.snap  coerce_match_branches1.snap  coerce_match_branches2.snap  empty_fn.snap  enum_constructor.snap  factorial.snap  field_pat.snap  float_lit.snap  fn_params.snap  fn_var.snap  if_then_else.snap  infer_ret_type.snap  int_lit.snap  lambda.snap  lambda2.snap  lambda_call.snap  lambda_return_int.snap  lambda_return_unit.snap  let_var.snap  loop_int.snap  loop_never.snap  loop_unit.snap  match_expr.snap  named_struct_pat.snap  parity.snap  return_int.snap  return_unit.snap  struct_.snap  struct_constructor.snap  struct_destructure.snap  struct_field.snap  struct_pat.snap  tuple.snap  tuple_destructure.snap  tuple_field.snap  (+3 more)
crates/walrus-semantics/src/: builtins.rs  diagnostic.rs  hir.rs  lib.rs  scopes.rs  ty.rs
crates/walrus-semantics/src/hir/: lower.rs  walk.rs
crates/walrus-semantics/src/ty/: infer.rs  unify.rs
crates/walrus-syntax/: Cargo.toml
crates/walrus-syntax/src/: lib.rs  nodes.rs  tokens.rs
crates/walrus-syntax/src/nodes/: decl.rs  expr.rs  lit.rs  pat.rs  stmt.rs  ty.rs
examples/: add_options  add_options.ll  add_options.walrus  list_length.ll  list_length.walrus  unecessary_semicolon.walrus
examples/err/: mutation.walrus  unnecessary_semicolon.ll  unnecessary_semicolon.walrus
examples/ok/: char.walrus  float.walrus  hello_null_world.walrus  hello_world.walrus  int.walrus  lists.walrus  login.walrus  scopes.walrus  string.walrus
report/: flake.nix  grammar.Rmd  main.tex  makefile  report.Rmd  report.tex
report/chapters/: error_messages.tex  grammar.tex  implementation.tex  influences.tex  reference.tex  typing_rules.tex
(+4 files in other folders)
