[package]
name = "walrus-codegen"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena = { path = "../arena" }
walrus-semantics = { path = "../walrus-semantics" }

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }

[dev-dependencies]
insta = "1.5.3"
