[package]
name = "walrus-lexer"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
text-size = "1.1.0"

[dev-dependencies]
insta = "1.5.3"
