[package]
name = "walrus-parser"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walrus-lexer = { path = "../walrus-lexer" }
walrus-syntax = { path = "../walrus-syntax" }

nom = "6.1.2"
nom-supreme = "0.4.2"

[dev-dependencies]
insta = "1.7.1"
