[package]
name = "walrus-semantics"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena = { path = "../arena" }
walrus-syntax = { path = "../walrus-syntax" }

smol_str = "0.1.17"
ena = "0.14.0"
either = "1.6.1"
derive_more = "0.99.13"

[dev-dependencies]
walrus-parser = { path = "../walrus-parser" }
insta = "1.7.1"
