[package]
name = "walrus-syntax"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walrus-lexer = { path = "../walrus-lexer" }

smol_str = "0.1.17"
text-size = "1.1.0"
